// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.app;

option go_package = "personal-website-v2/go-data/app;app";

// Proto file describing the App.

// The app info.
message AppInfo {
    // The app ID.
    uint64 id = 1;

    // The app group ID.
    uint64 group_id = 2;

    // The app version.
    string version = 3;

    // The environment.
    string env = 4;
}
